Fix issue with bottom of map being cut off when highlights are shown

--- a/covid-19-support/src/scss/main.scss
+++ b/covid-19-support/src/scss/main.scss
@@ -89,6 +89,8 @@ h6,
 
   @include media-breakpoint-down(sm) {
     padding-bottom: 42px;
+
+    padding-top: $mobile-search-filters-height + 41px;
   }
 }
 
